--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="box">
   <h1 class="texto">Jaguar XE </h1>
   <p class="texto">Jaguar has always had a passion for creativity, innovation and dynamic design; qualities we feel are perfectly expressed in XE. With the introduction of this astonishing vehicle we have joined forces with the very best British creative minds to craft a series of collaborative projects.</p>
-  <button type="button" class="texto">Go to the web-site</button>
+  <input type="submit" src="" value="Go to the web-site" /> </input>
 </div>
 
 </body>
